--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A *NumPy* array may be created using the *np.array()* method."
+    "A *NumPy* array may be created using the `np.array()` method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -88,12 +88,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One can also create multidimensional arrays in *NumPy*. for example, consider a use case of 3 egg carton. a machine has assessed the eggs in each carton and predicted how fare the eggs are rotten. (1-fresh, 0-completely rotten)."
+    "One can also create multidimensional arrays in *NumPy*. for example, consider a use case of 3 egg carton. a machine has assessed the eggs in each carton and predicted how far the eggs are rotten. (1-fresh, 0-completely rotten)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can check which carton is the safest buy, by calculating the average freshness of each carton. This is done using *np.average()* method."
+    "Now we can check which carton is the safest buy, by calculating the average freshness of each carton. This is done using `np.average()` method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +409,7 @@
    "source": [
     "# 1. shape of the array\n",
     "print(passengers.shape)\n",
+    "\n",
     "# 2. average age of the passengers\n",
     "print(np.average(passengers[:, 3]))\n",
     "\n",
@@ -416,6 +417,7 @@
     "maxage = np.max(passengers[:, 3])\n",
     "oldest=passengers[passengers[:, 3] == maxage]\n",
     "print(oldest[0][2])\n",
+    "\n",
     "# youngest passenger\n",
     "minage = np.min(passengers[:, 3])\n",
     "youngest=passengers[passengers[:, 3] == minage]\n",
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -474,6 +476,266 @@
     "print(first_class_survival_rate)\n",
     "print(second_class_survival_rate)\n",
     "print(third_class_survival_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "COPY vs VIEW\n",
+    "\n",
+    "+ Use the `.copy()` method to create a copy of a *NumPy* array, and\n",
+    "+ Use the `.view()` method to create a view."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# declare an array\n",
+    "arr=np.array([1, 2, 3, 4, 5, 6])\n",
+    "\n",
+    "# create a copy\n",
+    "arr2=arr.copy()\n",
+    "print(arr2)\n",
+    "\n",
+    "# create a view\n",
+    "arr3=arr.view()\n",
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These both produce the same result. However the difference is that:\n",
+    "\n",
+    "+ A *copy* creates a new, independent array from an existing one. Any change made to the original will not be reflected in the new one, and vice-versa.\n",
+    "+ A *view* simply displays the array. Hence any change made to the array will be reflected in the view, and vice-versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  2  3  4  5  6]\n",
+      "[1 2 3 4 5 6]\n",
+      "[10  2  3  4  5  6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a change to arr\n",
+    "arr[0]=10\n",
+    "print(arr)\n",
+    "\n",
+    "# arr2 is a copy of arr, so it remains the same\n",
+    "print(arr2)\n",
+    "\n",
+    "# arr3 is a view of arr, so it changes\n",
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  2  3  4  5  6]\n",
+      "[10  2 30  4  5  6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# similarly, make a change in arr2 (the copy)\n",
+    "arr2[1]=20\n",
+    "\n",
+    "# arr remains the same\n",
+    "print(arr)\n",
+    "\n",
+    "# make a change in arr3 (the view)\n",
+    "arr3[2]=30\n",
+    "\n",
+    "# arr changes\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ITERATION\n",
+    "\n",
+    "You can iterate over the *NumPy* array just like in a normal list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "2\n",
+      "30\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in arr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This approach becomes difficult with higher dimensional arrays, as the number of nested loops becomes too much. For this reason, we use the `np.nditer()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 \n",
+      "1 2 3 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "# 2D array\n",
+    "arr=np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "# using for loops\n",
+    "for i in arr:\n",
+    "    for j in i:\n",
+    "        print(j, end=\" \")\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# using np.nditer()\n",
+    "for i in np.nditer(arr):\n",
+    "    print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The datatype of the element may be changed while iterating. *NumPy* does not perform this conversion in place, therefore it requires a buffer space. this is provided in the parameter \n",
+    "`flags=['buffered]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'1'\n",
+      "b'2'\n",
+      "b'3'\n",
+      "b'4'\n",
+      "b'5'\n",
+      "b'6'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(arr, flags=['buffered'], op_dtypes=['S']):\n",
+    "  print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The step size may be changed while iterating.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(arr[:, ::2]): # iterate over every other element in the array\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to display the index during iteration, use the `np.ndenumerate()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) 1\n",
+      "(0, 1) 2\n",
+      "(0, 2) 3\n",
+      "(1, 0) 4\n",
+      "(1, 1) 5\n",
+      "(1, 2) 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, x in np.ndenumerate(arr):\n",
+    "    print(i, x)"
    ]
   }
  ],
