made new notebook: NumPy RANDOM

--- a/NumPy BASICS.ipynb
+++ b/NumPy BASICS.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,12 +88,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One can also create multidimensional arrays in *NumPy*. for example, consider a use case of 3 egg carton. a machine has assessed the eggs in each carton and predicted how far the eggs are rotten. (1-fresh, 0-completely rotten)."
+    "One can also create multidimensional arrays in *NumPy*. \n",
+    "\n",
+    "For example, consider a use case of 3 egg cartons. A machine has assessed the eggs in each carton and predicted how far the eggs are rotten. (1-fresh, 0-completely rotten)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,12 +315,272 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ASSIGNMENT\n",
+    "COPY vs VIEW\n",
     "\n",
-    "Given below is the data of 50 passengers from the Titanic dataset. each row of the array contains 4 values:\n",
+    "+ Use the `.copy()` method to create a copy of a *NumPy* array, and\n",
+    "+ Use the `.view()` method to create a view."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# declare an array\n",
+    "arr=np.array([1, 2, 3, 4, 5, 6])\n",
+    "\n",
+    "# create a copy\n",
+    "arr2=arr.copy()\n",
+    "print(arr2)\n",
+    "\n",
+    "# create a view\n",
+    "arr3=arr.view()\n",
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These both produce the same result. However the difference is that:\n",
+    "\n",
+    "+ A *copy* creates a new, independent array from an existing one. Any change made to the original will not be reflected in the new one, and vice-versa.\n",
+    "+ A *view* simply displays the array. Hence any change made to the array will be reflected in the view, and vice-versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  2  3  4  5  6]\n",
+      "[1 2 3 4 5 6]\n",
+      "[10  2  3  4  5  6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a change to arr\n",
+    "arr[0]=10\n",
+    "print(arr)\n",
+    "\n",
+    "# arr2 is a copy of arr, so it remains the same\n",
+    "print(arr2)\n",
+    "\n",
+    "# arr3 is a view of arr, so it changes\n",
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  2  3  4  5  6]\n",
+      "[10  2 30  4  5  6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# similarly, make a change in arr2 (the copy)\n",
+    "arr2[1]=20\n",
+    "\n",
+    "# arr remains the same\n",
+    "print(arr)\n",
+    "\n",
+    "# make a change in arr3 (the view)\n",
+    "arr3[2]=30\n",
+    "\n",
+    "# arr changes\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ITERATION\n",
+    "\n",
+    "You can iterate over the *NumPy* array just like in a normal list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "2\n",
+      "30\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in arr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This approach becomes difficult with higher dimensional arrays, as the number of nested loops becomes too much. For this reason, we use the `np.nditer()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 \n",
+      "1 2 3 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "# 2D array\n",
+    "arr=np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "# using for loops\n",
+    "for i in arr:\n",
+    "    for j in i:\n",
+    "        print(j, end=\" \")\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# using np.nditer()\n",
+    "for i in np.nditer(arr):\n",
+    "    print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The datatype of the element may be changed while iterating. *NumPy* does not perform this conversion in place, therefore it requires a buffer space. this is provided in the parameter \n",
+    "`flags=['buffered]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'1'\n",
+      "b'2'\n",
+      "b'3'\n",
+      "b'4'\n",
+      "b'5'\n",
+      "b'6'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(arr, flags=['buffered'], op_dtypes=['S']):\n",
+    "  print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The step size may be changed while iterating.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in np.nditer(arr[:, ::2]): # iterate over every other element in the array\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to display the index during iteration, use the `np.ndenumerate()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) 1\n",
+      "(0, 1) 2\n",
+      "(0, 2) 3\n",
+      "(1, 0) 4\n",
+      "(1, 1) 5\n",
+      "(1, 2) 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, x in np.ndenumerate(arr):\n",
+    "    print(i, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXERCISE\n",
+    "\n",
+    "Given below is the data of 50 passengers from the Titanic dataset. Each row of the array contains 4 values:\n",
     "1. passenger id\n",
     "2. survived? (1-yes, 0-no)\n",
-    "3. passenger class (1-uppper, 2-middle, 3-lower)\n",
+    "3. passenger class (1-upper, 2-middle, 3-lower)\n",
     "4. age\n",
     "\n",
     "Analyse the data and find the following information:\n",
@@ -327,12 +589,12 @@
     "2. What is the average age of the passengers?\n",
     "3. What is the passenger number of the oldest passenger? Who is the youngest?\n",
     "4. What is the percentage of folks that survived?\n",
-    "5. percentage of people that survived, based on their passenger class"
+    "5. Percentage of people that survived, based on their passenger class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -476,266 +738,6 @@
     "print(first_class_survival_rate)\n",
     "print(second_class_survival_rate)\n",
     "print(third_class_survival_rate)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "COPY vs VIEW\n",
-    "\n",
-    "+ Use the `.copy()` method to create a copy of a *NumPy* array, and\n",
-    "+ Use the `.view()` method to create a view."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6]\n",
-      "[1 2 3 4 5 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# declare an array\n",
-    "arr=np.array([1, 2, 3, 4, 5, 6])\n",
-    "\n",
-    "# create a copy\n",
-    "arr2=arr.copy()\n",
-    "print(arr2)\n",
-    "\n",
-    "# create a view\n",
-    "arr3=arr.view()\n",
-    "print(arr3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These both produce the same result. However the difference is that:\n",
-    "\n",
-    "+ A *copy* creates a new, independent array from an existing one. Any change made to the original will not be reflected in the new one, and vice-versa.\n",
-    "+ A *view* simply displays the array. Hence any change made to the array will be reflected in the view, and vice-versa."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10  2  3  4  5  6]\n",
-      "[1 2 3 4 5 6]\n",
-      "[10  2  3  4  5  6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# make a change to arr\n",
-    "arr[0]=10\n",
-    "print(arr)\n",
-    "\n",
-    "# arr2 is a copy of arr, so it remains the same\n",
-    "print(arr2)\n",
-    "\n",
-    "# arr3 is a view of arr, so it changes\n",
-    "print(arr3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10  2  3  4  5  6]\n",
-      "[10  2 30  4  5  6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# similarly, make a change in arr2 (the copy)\n",
-    "arr2[1]=20\n",
-    "\n",
-    "# arr remains the same\n",
-    "print(arr)\n",
-    "\n",
-    "# make a change in arr3 (the view)\n",
-    "arr3[2]=30\n",
-    "\n",
-    "# arr changes\n",
-    "print(arr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ITERATION\n",
-    "\n",
-    "You can iterate over the *NumPy* array just like in a normal list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "2\n",
-      "30\n",
-      "4\n",
-      "5\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in arr:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This approach becomes difficult with higher dimensional arrays, as the number of nested loops becomes too much. For this reason, we use the `np.nditer()` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4 5 6 \n",
-      "1 2 3 4 5 6 "
-     ]
-    }
-   ],
-   "source": [
-    "# 2D array\n",
-    "arr=np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "\n",
-    "# using for loops\n",
-    "for i in arr:\n",
-    "    for j in i:\n",
-    "        print(j, end=\" \")\n",
-    "\n",
-    "print()\n",
-    "\n",
-    "# using np.nditer()\n",
-    "for i in np.nditer(arr):\n",
-    "    print(i, end=\" \")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The datatype of the element may be changed while iterating. *NumPy* does not perform this conversion in place, therefore it requires a buffer space. this is provided in the parameter \n",
-    "`flags=['buffered]`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'1'\n",
-      "b'2'\n",
-      "b'3'\n",
-      "b'4'\n",
-      "b'5'\n",
-      "b'6'\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in np.nditer(arr, flags=['buffered'], op_dtypes=['S']):\n",
-    "  print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The step size may be changed while iterating.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "4\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in np.nditer(arr[:, ::2]): # iterate over every other element in the array\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you want to display the index during iteration, use the `np.ndenumerate()` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 0) 1\n",
-      "(0, 1) 2\n",
-      "(0, 2) 3\n",
-      "(1, 0) 4\n",
-      "(1, 1) 5\n",
-      "(1, 2) 6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, x in np.ndenumerate(arr):\n",
-    "    print(i, x)"
    ]
   }
  ],
