--- a/NumPy RANDOM.ipynb
+++ b/NumPy RANDOM.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69\n",
-      "0.8474290944437843\n",
-      "[[18 20 45 31]\n",
-      " [46  0  6 10]\n",
-      " [ 1 39 33 32]]\n",
-      "[0.98624562 0.52608127 0.7593254  0.43436647]\n",
-      "7\n"
+      "35\n",
+      "0.03287615248539055\n",
+      "[[13 21  4  7]\n",
+      " [ 1 35 36 30]\n",
+      " [13  8 11  6]]\n",
+      "[0.11163463 0.13824945 0.90797164 0.99815846]\n",
+      "2\n"
      ]
     }
    ],
@@ -59,6 +59,73 @@
     "print(random.randint(50, size=(3, 4)))\n",
     "print(random.rand(4))\n",
     "print(random.choice([2, 3, 4, 5, 7, 8, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA DISTRIBUTION\n",
+    "\n",
+    "A *data distribution* is a list of all possible values, as well as how often each value occurs.\n",
+    "\n",
+    "A *random distribution* is a set of random numbers that follow a *probability density function*. A probability density function is a function that describes a continuous probability.\n",
+    "\n",
+    "We can generate random numbers on defined probabilities by using the `random.choice()` method. Here there are 3 main parameters:\n",
+    "+ The array of number to choose randomly from.\n",
+    "+ `p` ie. the probability that each number will be included.\n",
+    "+ `size` ie. the number of values to generate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 7 7 7 5 7 5 7 5 7 3 3 3 3 5 3 7 7 5 3 7 7 7 3 3 7 7 7 7 5 5 5 5 7 7 7 7\n",
+      " 7 7 7 7 7 7 5 7 7 3 3 7 3 5 5 7 7 7 7 7 7 3 7 5 7 7 5 5 7 7 7 7 7 7 7 7 7\n",
+      " 3 3 3 5 7 7 5 7 7 5 7 7 7 7 5 7 3 5 7 7 7 7 5 5 7 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate 100 values from the given numbers [3, 5, 7, 9]\n",
+    "# the probability of each value occurring in the final distribution is given by the 'p' array. eg. 3 and 10% chance of occurring.\n",
+    "x=random.choice([3, 5, 7, 9], p=[0.1, 0.3, 0.6, 0.0], size=(100))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "notice that the number 9 did not appear at all in the distribution. This is because the probability of it, as given in the `p` array is 0.\n",
+    "\n",
+    "Also note that the sum of probabilities must equal 1. ie. `0.1+0.3+0.6+0.0=1.0`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 5 7 7 7]\n",
+      " [7 7 5 7 7]\n",
+      " [5 7 7 7 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = random.choice([3, 5, 7, 9], p=[0.1, 0.3, 0.6, 0.0], size=(3, 5))\n",
+    "print(z)"
    ]
   }
  ],
