--- a/NumPy RANDOM.ipynb
+++ b/NumPy RANDOM.ipynb
@@ -16,10 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from numpy import random # module in NumPy to generate random numbers"
    ]
   },
@@ -103,9 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "notice that the number 9 did not appear at all in the distribution. This is because the probability of it, as given in the `p` array is 0.\n",
+    "Notice that the number 9 did not appear at all in the distribution. This is because the probability of it as given in the `p` array is 0.\n",
     "\n",
-    "Also note that the sum of probabilities must equal 1. ie. `0.1+0.3+0.6+0.0=1.0`"
+    "Also note that the sum of probabilities must equal 1. ie. `0.1 + 0.3 + 0.6 + 0.0 = 1.0`"
    ]
   },
   {
@@ -126,6 +127,40 @@
    "source": [
     "z = random.choice([3, 5, 7, 9], p=[0.1, 0.3, 0.6, 0.0], size=(3, 5))\n",
     "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RANDOM PERMUTATIONS\n",
+    "\n",
+    "A *permutation* refers to an arrangement of elements. The `random` module offers 2 methods for generatiing permuatations of numbers:\n",
+    "+ `random.shuffle()` which shuffles the elements of the array in place.\n",
+    "+ `random.permutation()` which generates a random permutation of the given array.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 3 2 1 4]\n",
+      "[5 3 1 4 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([1, 2, 3, 4, 5])\n",
+    "random.shuffle(arr) # shuffle the array in place\n",
+    "print(arr)\n",
+    "\n",
+    "arr2=random.permutation(arr) # return a new array with the elements shuffled\n",
+    "print(arr2)"
    ]
   }
  ],
