added sources of info

--- a/NLTK.ipynb
+++ b/NLTK.ipynb
@@ -763,6 +763,14 @@
     "# print the corrected text\n",
     "print(corrected_text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*SOURCE:*\n",
+    "+ *Codedex* - https://www.codedex.io/gen-ai"
+   ]
   }
  ],
  "metadata": {
