--- a/NumPy BASICS.ipynb
+++ b/NumPy BASICS.ipynb
@@ -739,6 +739,15 @@
     "print(second_class_survival_rate)\n",
     "print(third_class_survival_rate)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*SOURCES:*\n",
+    "+ *Codedex* - https://www.codedex.io/numpy\n",
+    "+ *w3schools* - https://www.w3schools.com/python/numpy/default.asp"
+   ]
   }
  ],
  "metadata": {
