--- a/NumPy RANDOM.ipynb
+++ b/NumPy RANDOM.ipynb
@@ -353,7 +353,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sns.distplot(binom, hist)"
+    "*SOURCE:*\n",
+    "+ *w3schools* - https://www.w3schools.com/python/numpy/numpy_random.asp"
    ]
   }
  ],
