more cosmetic changes

--- a/NumPy/NumPy BASICS.ipynb
+++ b/NumPy/NumPy BASICS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**LEARNING NumPy**"
+    "# LEARNING NumPy"
    ]
   },
   {
@@ -23,6 +23,13 @@
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction"
    ]
   },
   {
@@ -82,6 +89,13 @@
     "print(notifications[4:])\n",
     "print(notifications[:3])\n",
     "print(notifications[-2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi-Dimensional Arrays"
    ]
   },
   {
@@ -169,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OPERATORS AND FUNCTIONS"
+    "### Operators and Functions"
    ]
   },
   {
@@ -315,8 +329,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "COPY vs VIEW\n",
-    "\n",
+    "### Copy vs View"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ Use the `.copy()` method to create a copy of a *NumPy* array, and\n",
     "+ Use the `.view()` method to create a view."
    ]
@@ -417,8 +436,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ITERATION\n",
-    "\n",
+    "### Iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can iterate over the *NumPy* array just like in a normal list."
    ]
   },
@@ -575,8 +599,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
-    "\n",
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Given below is the data of 50 passengers from the Titanic dataset. Each row of the array contains 4 values:\n",
     "1. passenger id\n",
     "2. survived? (1-yes, 0-no)\n",
@@ -744,7 +773,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*SOURCES:*\n",
+    "### Sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ *Codedex* - https://www.codedex.io/numpy\n",
     "+ *w3schools* - https://www.w3schools.com/python/numpy/default.asp"
    ]
