--- a/NumPy/NumPy RANDOM.ipynb
+++ b/NumPy/NumPy RANDOM.ipynb
@@ -25,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The *Random* Module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -381,8 +388,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "POISSON DISTRIBUTION\n",
-    "\n",
+    "### Poisson Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This a type of discrete distribution that estimates how many times an event can occur in a specified time interval. Use the `random.poisson()` method to create a poisson distribution. This method has 2 parameters:\n",
     "+ `lam`: rate or number of known occurences.\n",
     "+ `size`: shape of the returned array."
@@ -411,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The poisson distibution showcases the randomness around an average. Given that an event occurs 2 times in a time interval, the poisson distribution showcases the randomness associated with this number. ie. the event may occur once or thrice in certain instances as well."
+    "The *poisson distibution* showcases the randomness around an average. Given that an event occurs 2 times in a time interval, the poisson distribution showcases the randomness associated with this number. ie. the event may occur once or thrice in certain instances as well."
    ]
   },
   {
@@ -439,9 +451,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "UNIFORM DISTRIBUTION\n",
-    "\n",
-    "The uniform distribution specifies that all numbers within a specific range have equal probability of occurence. eg. a coin toss, in which the numbers 1-6 each have an equal probability of occurrence.\n",
+    "### Uniform Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *uniform distribution* specifies that all numbers within a specific range have equal probability of occurence. eg. a coin toss, in which the numbers 1-6 each have an equal probability of occurrence.\n",
     "\n",
     "We use the `random.uniform()` method which has 3 parameters:\n",
     "+ `low`: lower bound with default=0.0. (inclusive)\n",
@@ -473,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the output depicts 10 numbers selected with equal probability, from the range [0, 5)."
+    "The output depicts 10 numbers selected with equal probability, from the range [0, 5)."
    ]
   },
   {
@@ -501,8 +518,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LOGISTIC DISTRIBUTION\n",
-    "\n",
+    "### Logistic Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The logistic distribution is used to desribe growth. It finds use in the logistic regression algorithm in ML, neural networks, etc.\n",
     "\n",
     "Use the `random.logistic()` method to create a logistic distribution. This has 3 parameters:\n",
@@ -555,8 +577,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multinomial Distribution\n",
-    "\n",
+    "### Multinomial Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A multinomial distribution is a generalisation of the binomial distribution, which gives the outcomes for multinomial scenarios, eg. rolling of a dice.\n",
     "\n",
     "Use the `random.multinomial()` function to create a multinomial distiribution, with the following 3 parameters:\n",
@@ -608,8 +635,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exponential Distribution\n",
-    "\n",
+    "### Exponential Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It is used for describing the time till the next event.\n",
     "\n",
     "the exponential distribution is made using the `random.exponential()` method. This has 2 parameters:\n",
@@ -661,8 +693,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chi Square Distribution \n",
-    "\n",
+    "### Chi Square Distribution "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is commonly used to verify the hypothesis. The method used is `random.chisquare()` and there are 2 parameters:\n",
     "+ `df`: degrees of freedom.\n",
     "+ `size`: shape of the returned array."
@@ -713,8 +750,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SOURCES:\n",
-    "\n",
+    "### Sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ *w3schools* - https://www.w3schools.com/python/numpy/numpy_random.asp\n",
     "+ *Wikipedia* - https://en.wikipedia.org/wiki/Multinomial_distribution\n",
     "+ *Bing Copilot*"
