added cnn explanantion to keras folder

--- a/Keras/2. The Keras Functional API.ipynb
+++ b/Keras/2. The Keras Functional API.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Keras Modules"
+    "###  Modules in Keras"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "+ convolutional layers: `Conv1D`, `Conv2D`, `Conv3D`, `Conv2DTranspose` \n",
     "+ pooling layers: `MaxPooling1D`, `MaxPooling2D`, `MaxPooling3D`. `AveragePooling1D`, `AveragePooling2D`, `AveragePooling3D`\n",
     "+ recurrent layers: `LSTM`, `RNN`, `GRU`\n",
-    "+ normalisation layers: `BatchNormalization`, `Layernormalization`\n",
+    "+ normalisation layers: `BatchNormalization`, `LayerNormalization`\n",
     "+ embedding layers: `Embedding`\n",
     "+ advanced activations: `LeakyReLU`. `PReLU`, `ELU`\n",
     "+ merge layers: `Add`, `Subtract`, `Multiply`, `Average`, `Maximum`, `Concatenate`\n"
@@ -110,18 +110,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The keras.callbacks module contains various callback functions. These are:\n",
-    "+ `ModelCheckpoint`\n",
-    "+ `EarlyStopping`\n",
-    "+ `ReduceLROnPlateau`\n",
-    "+ `LearningRateScheduler`\n"
+    "### `keras.callbacks`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keras also offers built in datasets for training models. These are accessed using the keras.datasets module. Some of the popular datasets are:\n",
+    "Keras callbacks are special functions that you can use during the training of your machine learning models to customize and extend the behavior of the training process. They allow you to monitor the training process, log information, save models, and even stop training early if certain conditions are met.\n",
+    "\n",
+    "The `keras.callbacks` module contains various callback functions. These are:\n",
+    "+ `ModelCheckpoint`: saves the model after every epoch\n",
+    "+ `EarlyStopping`: stops training the model if therer is no improvement by epoch\n",
+    "+ `ReduceLROnPlateau`: reduces the learning rate when a model has stopped improving\n",
+    "+ `LearningRateScheduler`: changes the learning rate during training\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `keras.datasets`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keras also offers built in datasets for training models. These are accessed using the `keras.datasets` module. Some of the popular datasets are:\n",
     "+ `mnist`: handwritten digits dataset\n",
     "+ `cifar10`: 60,000 32x32 colour images in 10 classes\n",
     "+ `cifar100`: 60,000 32x32 colour images in 100 classes\n",
@@ -140,7 +156,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ [Keras Documentation](https://keras.io/guides/functional_api/)"
+    "+ [Keras Documentation](https://keras.io/guides/functional_api/)\n",
+    "+ github.com"
    ]
   }
  ],
