--- a/Keras/5. Creating a CNN.ipynb
+++ b/Keras/5. Creating a CNN.ipynb
@@ -91,7 +91,11 @@
         "id": "q8Hxb00c6Ddx"
       },
       "source": [
-        "Create a model by stacking Conv2D layers.\n",
+        "Create a model by stacking Conv2D layers. Note that we use a pooling layer after each conv2D layer, wg=hich eill help to reduce the dimentions of the feature map provided by the Conv2D layer. \n",
+        "\n",
+        "`Dropout` is a regularisation technique. in dropout, a number of neurons are randomly dropped from the layer, and do not take part in processing activities. this is done to improve generalisation and reduce the dependency of the model of a few neurons.\n",
+        "\n",
+        "A `Flatten` layer is also included, before the data is fed into the dense layers. The `Flatten` layer is used to reduce the data to one dimension so that it may be fed into the dense layer for further processing.\n",
         "\n"
       ]
     },
@@ -104,19 +108,38 @@
       "outputs": [],
       "source": [
         "def createModel():\n",
+        "  # input layer\n",
         "  input=Input(shape=(32, 32, 3), name='input')\n",
+        "  # first convolutional layer\n",
         "  conv1=Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3), name='conv1')(input)\n",
+        "  # max pooling layer\n",
         "  pool1=MaxPooling2D(2, 2)(conv1)\n",
+        "  # dropout layer\n",
         "  drop1=Dropout(0.5)(pool1)\n",
+        "\n",
+        "  # second convolutional layer\n",
         "  conv2=Conv2D(64, (3, 3), activation='relu', name='conv2')(drop1)\n",
         "  pool2=MaxPooling2D(2, 2)(conv2)\n",
         "  drop2=Dropout(0.5)(pool2)\n",
+        "\n",
+        "  # third convolutional layer\n",
         "  conv3=Conv2D(128, (3, 3), activation='relu', name='conv3')(drop2)\n",
+        "\n",
+        "  # flatten layer\n",
         "  flat=Flatten()(conv3)\n",
+        "\n",
+        "  # dense layer\n",
         "  dense1=Dense(128, activation='relu', name='dense1')(flat)\n",
         "  output=Dense(10, activation='softmax', name='output')(dense1)\n",
         "  model=Model(inputs=input, outputs=output)\n",
         "  return model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Compile the Model"
       ]
     },
     {
@@ -142,6 +165,20 @@
       "source": [
         "model=createModel()\n",
         "model.compile(optimizer=Adam(), loss='categorical_crossentropy', metrics=['accuracy'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Train the Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Add the early stopping callback and train the model on the data."
       ]
     },
     {
@@ -233,6 +270,20 @@
       "source": [
         "earlystopping=EarlyStopping(monitor='val_loss', patience=10, verbose=1, restore_best_weights=True)\n",
         "history=model.fit(trainimage, trainlabelarray, epochs=100, shuffle=True, validation_split=0.2, callbacks=[earlystopping])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here we see that due to the action of early stopping, the training has stopped at 33 epochs instead of completing all 100."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Test the Model"
       ]
     },
     {
@@ -339,6 +390,21 @@
       ],
       "source": [
         "plot_history(history)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Sources"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "+ [Infosys Springboard](https://infyspringboard.onwingspan.com/web/en/viewer/video/lex_auth_01329472454671564827503_shared?collectionId=lex_auth_01329472278937600027536_shared&collectionType=Course&pathId=lex_auth_01329472325597593627505_shared)\n",
+        "+ [geeksforgeeks.org](https://www.geeksforgeeks.org/what-is-a-neural-network-flatten-layer/)"
       ]
     }
   ],
