created Pandas folder

--- a/Keras/7. Autoencoders.ipynb
+++ b/Keras/7. Autoencoders.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AutoEncoders"
+    "# Auto Encoders"
    ]
   },
   {
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "from keras.datasets import mnist\n"
+    "from keras.datasets import mnist"
    ]
   }
  ],
