added to the NLTK notebook

--- a/NLTK.ipynb
+++ b/NLTK.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**LEARNING NLTK**"
+    "# NLTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction"
    ]
   },
   {
@@ -16,13 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import library\n",
     "import nltk\n",
-    "#nltk.download('punkt_tab')\n"
+    "#nltk.download('punkt_tab')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenisation"
    ]
   },
   {
@@ -34,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +68,107 @@
     "tokens = nltk.word_tokenize(sample_text.lower())\n",
     "#print the tokens:\n",
     "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stop Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"wouldn't\", 'when', 've', 'both', 'had', \"they've\", 'i', 'so', 'shan', 'me', \"you'll\", \"i've\", 'too', 'was', 'his', \"haven't\", 'up', 'most', 'then', 'and', 'shouldn', 'mustn', 'they', 'isn', 'couldn', \"wasn't\", 'our', 'he', \"i'll\", 'to', 'being', 'why', \"he'd\", 'themselves', 'the', 'him', 'against', 'd', 'after', 'of', \"shouldn't\", \"won't\", 'wasn', 'in', 'now', 'same', 'wouldn', \"didn't\", 'll', \"you're\", 'only', \"i'm\", 'we', 'am', 'all', 'before', 'own', \"isn't\", 'herself', 'were', 's', \"mustn't\", \"should've\", 'just', \"she's\", 'doing', 'it', 'under', \"you'd\", 'y', 'mightn', 'their', 'my', 'hadn', 't', 'a', 'if', 'her', 'ma', \"we'll\", 'its', 'through', \"don't\", 'or', \"doesn't\", 'did', 'off', 'those', 'o', 'has', 'an', 'again', 'ours', 'because', \"she'd\", 'be', 'once', 'hers', \"mightn't\", 'below', \"weren't\", 'above', 'between', 'can', 'what', 'don', \"he'll\", 'does', 'm', \"needn't\", 'here', \"we'd\", 'down', 'them', 'as', 'more', 'how', 'no', 'where', 'myself', 'out', \"he's\", 'have', 'not', 'nor', 'doesn', 'aren', 'needn', \"it'd\", 'weren', 'until', \"she'll\", 'for', \"we've\", 'such', 'yourself', 'from', 'hasn', \"they'll\", \"hadn't\", 'your', 'about', 'didn', 'is', 'each', 'during', 'ain', 'do', 'few', 'that', 'on', 'while', \"couldn't\", 'she', \"i'd\", \"they'd\", 'yours', 'very', 'than', 'into', 'haven', 'this', 'at', 'further', \"it'll\", 'which', 'you', 'some', 'by', \"we're\", 'with', 'are', 're', 'theirs', 'won', 'should', \"hasn't\", 'but', 'who', \"it's\", 'been', \"that'll\", 'yourselves', 'other', 'itself', 'having', \"shan't\", \"they're\", 'there', 'will', 'these', 'whom', \"aren't\", 'ourselves', 'over', \"you've\", 'any', 'himself'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "sentence=\"This is a sample sentence, showing off the stop words filtration.\"\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "print(stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This', 'sample', 'sentence', ',', 'showing', 'stop', 'words', 'filtration', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words=word_tokenize(sentence)\n",
+    "filtered_sentence = [w for w in words if not w in stop_words]\n",
+    "print(filtered_sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stemming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stemming refers to separating a base word from its stem. This helps to find the base meaning. eg:\n",
+    "\n",
+    "`['ride', 'riding', 'ridden']`\n",
+    "\n",
+    "The base word here is common to all three, that is 'rid'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### N-grams"
    ]
   },
   {
@@ -106,9 +221,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TEXT CLASSIFICATION USING NAIVE BAYES ALGORITHM\n",
-    "\n",
-    "the steps are:"
+    "### Text Classification using Naive Bayes Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The steps are:"
    ]
   },
   {
@@ -120,12 +240,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inport the necessary libraries\n",
-    "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import train_test_split\n",
