--- a/NLTK.ipynb
+++ b/NLTK.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -97,7 +97,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"wouldn't\", 'when', 've', 'both', 'had', \"they've\", 'i', 'so', 'shan', 'me', \"you'll\", \"i've\", 'too', 'was', 'his', \"haven't\", 'up', 'most', 'then', 'and', 'shouldn', 'mustn', 'they', 'isn', 'couldn', \"wasn't\", 'our', 'he', \"i'll\", 'to', 'being', 'why', \"he'd\", 'themselves', 'the', 'him', 'against', 'd', 'after', 'of', \"shouldn't\", \"won't\", 'wasn', 'in', 'now', 'same', 'wouldn', \"didn't\", 'll', \"you're\", 'only', \"i'm\", 'we', 'am', 'all', 'before', 'own', \"isn't\", 'herself', 'were', 's', \"mustn't\", \"should've\", 'just', \"she's\", 'doing', 'it', 'under', \"you'd\", 'y', 'mightn', 'their', 'my', 'hadn', 't', 'a', 'if', 'her', 'ma', \"we'll\", 'its', 'through', \"don't\", 'or', \"doesn't\", 'did', 'off', 'those', 'o', 'has', 'an', 'again', 'ours', 'because', \"she'd\", 'be', 'once', 'hers', \"mightn't\", 'below', \"weren't\", 'above', 'between', 'can', 'what', 'don', \"he'll\", 'does', 'm', \"needn't\", 'here', \"we'd\", 'down', 'them', 'as', 'more', 'how', 'no', 'where', 'myself', 'out', \"he's\", 'have', 'not', 'nor', 'doesn', 'aren', 'needn', \"it'd\", 'weren', 'until', \"she'll\", 'for', \"we've\", 'such', 'yourself', 'from', 'hasn', \"they'll\", \"hadn't\", 'your', 'about', 'didn', 'is', 'each', 'during', 'ain', 'do', 'few', 'that', 'on', 'while', \"couldn't\", 'she', \"i'd\", \"they'd\", 'yours', 'very', 'than', 'into', 'haven', 'this', 'at', 'further', \"it'll\", 'which', 'you', 'some', 'by', \"we're\", 'with', 'are', 're', 'theirs', 'won', 'should', \"hasn't\", 'but', 'who', \"it's\", 'been', \"that'll\", 'yourselves', 'other', 'itself', 'having', \"shan't\", \"they're\", 'there', 'will', 'these', 'whom', \"aren't\", 'ourselves', 'over', \"you've\", 'any', 'himself'}\n"
+      "{'shouldn', 'her', 'all', 'a', 'isn', 'about', \"she's\", 'or', 'she', 'the', 'any', 'further', 'shan', 's', 'him', 'which', 'them', \"we're\", \"haven't\", \"he'll\", 'won', 'nor', 'if', 'how', 'ours', 'yourself', \"don't\", 'he', 'himself', 'can', 'down', \"they've\", 'but', 'd', \"isn't\", \"you'd\", \"i've\", 'its', \"aren't\", 'o', 'whom', 'ourselves', 'we', 'me', 'didn', 'until', 'once', \"it'll\", 'mustn', 'while', 'herself', 'after', \"hadn't\", 'no', 'ma', 'ain', 'other', 'out', \"doesn't\", \"won't\", 'below', 'for', 'had', \"mightn't\", 'that', 'been', 'against', 'hadn', \"they'll\", 'when', \"shan't\", 'by', 'y', \"i'll\", 'itself', 'aren', 'those', 'very', \"you're\", 'an', 'be', 'hers', 'i', 'because', 'few', 'these', 'couldn', \"we'll\", 'do', 'on', \"weren't\", 'has', 'before', 'hasn', 'were', 'only', 'who', 'through', 'not', 'they', 'from', 'wasn', 'did', 't', \"it's\", 'here', \"they'd\", 'it', \"needn't\", \"you'll\", 'doing', 'yours', 'then', \"couldn't\", 'in', 'myself', 'have', 'weren', \"he's\", 'same', 'being', \"hasn't\", 'their', \"i'm\", 'during', 'than', 'under', 'your', 'themselves', \"shouldn't\", \"he'd\", 'was', 'yourselves', 'are', 'don', 'our', 'having', 've', 'too', 'is', \"we've\", \"we'd\", 'over', 'this', 'own', 'you', 'should', 'haven', 'am', 'of', 'and', 'with', \"wouldn't\", \"they're\", 'some', 'll', 'my', 'up', \"wasn't\", 'just', 'between', 'above', 'into', 'more', \"she'll\", 'now', 'theirs', 'where', 'does', 'needn', 'at', \"didn't\", \"it'd\", 'off', 'wouldn', \"she'd\", 'as', 'm', 'such', 'to', 'will', \"mustn't\", 'doesn', 'mightn', \"that'll\", 'why', 'there', \"should've\", 'what', 'most', 'both', \"i'd\", 'his', 're', 'so', \"you've\", 'each', 'again'}\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -159,9 +159,102 @@
    "source": [
     "Stemming refers to separating a base word from its stem. This helps to find the base meaning. eg:\n",
     "\n",
-    "`['ride', 'riding', 'ridden']`\n",
+    "*['ride', 'riding', 'ridden']*\n",
     "\n",
-    "The base word here is common to all three, that is 'rid'"
+    "The base word here is common to all three, that is *'rid'*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "like\n",
+      "like\n",
+      "like\n",
+      "liker\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk import PorterStemmer\n",
+    "\n",
+    "ps=PorterStemmer()\n",
+    "\n",
+    "words=[\"liking\", \"liked\", \"likes\", \"liker\"]\n",
+    "\n",
+    "for w in words:\n",
+    "    print(ps.stem(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parts of Speech Tagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger_eng.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')  # For word_tokenize\n",
+    "nltk.download('averaged_perceptron_tagger_eng')  # For pos_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['All', 'that', 'is', 'gold', 'does', 'not', 'glitter', '.']\n",
+      "[('All', 'DT'), ('that', 'DT'), ('is', 'VBZ'), ('gold', 'NN'), ('does', 'VBZ'), ('not', 'RB'), ('glitter', 'VB'), ('.', '.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk import pos_tag\n",
+    "\n",
+    "sentence=\"All that is gold does not glitter.\"\n",
+    "\n",
+    "words=nltk.word_tokenize(sentence)\n",
+    "print(words)\n",
+    "\n",
+    "tags=pos_tag(words)\n",
+    "print(tags)\n"
    ]
   },
   {
