--- a/NLTK/2. NLTK Corpus.ipynb
+++ b/NLTK/2. NLTK Corpus.ipynb
@@ -28,57 +28,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "nltk.download('stopwords')"
+    "stop words are commonly used words in a language that are often excluded from processing because they carry little to no meaningful information. These words are usually so frequent that they can overshadow the more important terms in a text when analyzing or building models.\n",
+    "\n",
+    "Examples of stop words in English include:\n",
+    "\n",
+    "+ **Articles**: a, an, the\n",
+    "+ **Conjunctions**: and, or, but\n",
+    "+ **Prepositions**: in, on, at\n",
+    "+ **Pronouns**: he, she, they"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In NLTK, there is a built-in stopwords corpus that contains predefined lists of stop words for different languages. These lists can be used to filter out common words when processing text data.\n",
+    "\n",
+    "in order to use this corpus, we first need to download it, then import the package."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "# nltk.download('stopwords')\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'shouldn', 'her', 'all', 'a', 'isn', 'about', \"she's\", 'or', 'she', 'the', 'any', 'further', 'shan', 's', 'him', 'which', 'them', \"we're\", \"haven't\", \"he'll\", 'won', 'nor', 'if', 'how', 'ours', 'yourself', \"don't\", 'he', 'himself', 'can', 'down', \"they've\", 'but', 'd', \"isn't\", \"you'd\", \"i've\", 'its', \"aren't\", 'o', 'whom', 'ourselves', 'we', 'me', 'didn', 'until', 'once', \"it'll\", 'mustn', 'while', 'herself', 'after', \"hadn't\", 'no', 'ma', 'ain', 'other', 'out', \"doesn't\", \"won't\", 'below', 'for', 'had', \"mightn't\", 'that', 'been', 'against', 'hadn', \"they'll\", 'when', \"shan't\", 'by', 'y', \"i'll\", 'itself', 'aren', 'those', 'very', \"you're\", 'an', 'be', 'hers', 'i', 'because', 'few', 'these', 'couldn', \"we'll\", 'do', 'on', \"weren't\", 'has', 'before', 'hasn', 'were', 'only', 'who', 'through', 'not', 'they', 'from', 'wasn', 'did', 't', \"it's\", 'here', \"they'd\", 'it', \"needn't\", \"you'll\", 'doing', 'yours', 'then', \"couldn't\", 'in', 'myself', 'have', 'weren', \"he's\", 'same', 'being', \"hasn't\", 'their', \"i'm\", 'during', 'than', 'under', 'your', 'themselves', \"shouldn't\", \"he'd\", 'was', 'yourselves', 'are', 'don', 'our', 'having', 've', 'too', 'is', \"we've\", \"we'd\", 'over', 'this', 'own', 'you', 'should', 'haven', 'am', 'of', 'and', 'with', \"wouldn't\", \"they're\", 'some', 'll', 'my', 'up', \"wasn't\", 'just', 'between', 'above', 'into', 'more', \"she'll\", 'now', 'theirs', 'where', 'does', 'needn', 'at', \"didn't\", \"it'd\", 'off', 'wouldn', \"she'd\", 'as', 'm', 'such', 'to', 'will', \"mustn't\", 'doesn', 'mightn', \"that'll\", 'why', 'there', \"should've\", 'what', 'most', 'both', \"i'd\", 'his', 're', 'so', \"you've\", 'each', 'again'}\n"
+      "{'t', \"it's\", 'their', 'some', \"it'll\", 'between', 'd', 'needn', 'o', \"he'd\", \"we've\", 'to', 'yourself', 'there', \"won't\", \"couldn't\", 'so', 'of', 'once', 'themselves', \"we'd\", 'won', 'her', 'not', \"weren't\", 'only', \"we'll\", 'any', 'but', 'how', 'theirs', 'about', 'me', 'what', 'him', 'hadn', 'by', \"needn't\", \"you'd\", 'doing', 'had', 'we', \"doesn't\", 'll', 'in', 'isn', 'she', \"mustn't\", \"she's\", 'aren', 'have', 'was', 'while', 'here', 'that', 'where', 'whom', \"you've\", 'ma', 'they', 'on', 'does', \"he'll\", 'because', \"she'd\", \"they'd\", 'weren', 'as', 'very', 'up', \"hadn't\", \"they're\", \"that'll\", 'has', \"i'm\", 'most', 'than', 'same', 'then', 'and', 'a', 'are', 'i', 'shan', 'out', 'wouldn', 'which', \"didn't\", 'its', 'having', 'those', 'own', 'more', 'when', 'further', 'ourselves', 'our', 'your', \"aren't\", \"you're\", 'until', 'herself', 'during', 'again', \"shouldn't\", 'will', 'through', 'couldn', \"they'll\", 'himself', 'yours', 'who', \"you'll\", 'before', 'over', \"wouldn't\", \"haven't\", 'can', 'did', 'each', 'my', 'or', \"she'll\", 'ours', 'his', \"isn't\", \"hasn't\", \"i'd\", \"don't\", \"i'll\", 'after', \"it'd\", 'now', 'it', \"i've\", 'at', 'm', \"mightn't\", 'myself', 'into', \"shan't\", 'doesn', 'mustn', 'ain', 'hasn', \"should've\", 'should', 'itself', 'being', 'all', 'under', 's', 'haven', 'why', 'am', 'them', 'shouldn', 'be', 'from', 'don', 'these', 'he', \"wasn't\", 'been', \"he's\", 've', 'didn', 'too', 'such', 'just', 'mightn', 'few', 'for', 'hers', 'if', 'off', 'other', 'this', 'both', \"we're\", 'do', 'you', 'with', 'no', 'an', 'below', \"they've\", 'is', 'against', 'down', 'the', 'yourselves', 're', 'y', 'were', 'wasn', 'above', 'nor'}\n"
      ]
     }
    ],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "\n",
-    "sentence=\"This is a sample sentence, showing off the stop words filtration.\"\n",
     "stop_words = set(stopwords.words('english'))\n",
     "print(stop_words)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By removing stop words, we reduce the noise in the text data and focus on the words that carry more significant meaning."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +101,220 @@
     }
    ],
    "source": [
+    "sentence=\"This is a sample sentence, showing off the stop words filtration.\"\n",
     "words=word_tokenize(sentence)\n",
     "filtered_sentence = [w for w in words if not w in stop_words]\n",
     "print(filtered_sentence)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in a similar manner to stopwords, other corpora may be downloaded and imported from the `nltk.corpus` package, for use in various applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WordNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*WordNet* is a large lexical database of English. Nouns, verbs, adjectives and adverbs are grouped into sets of cognitive synonyms (synsets), each expressing a distinct concept. One can use it to find the synonyms, antonyms and definitions of words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\nagan\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download(\"wordnet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Synset('computer.n.01'), Synset('calculator.n.01')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import wordnet\n",
+    "syns=wordnet.synsets(\"computer\")\n",
+    "print(syns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the word itself, as well as the definition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer\n",
+      "a machine for performing calculations automatically\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(syns[0].lemmas()[0].name())\n",
+    "print(syns[0].definition())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['they drew up a six-step plan', 'they discussed plans for a new bond issue']\n"
+     ]
+    }
+   ],
+   "source": [
+    "syns1=wordnet.synsets(\"program\")\n",
+    "print(syns1[0].examples())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the synonyms and antonyms of a word:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dear', 'honest', 'unspoilt', 'commodity', 'thoroughly', 'adept', 'good', 'safe', 'expert', 'salutary', 'well', 'practiced', 'serious', 'honorable', 'full', 'just', 'goodness', 'respectable', 'ripe', 'in_force', 'undecomposed', 'trade_good', 'secure', 'upright', 'unspoiled', 'in_effect', 'skillful', 'effective', 'right', 'dependable', 'beneficial', 'estimable', 'sound', 'near', 'proficient', 'skilful', 'soundly'}\n",
+      "{'ill', 'bad', 'badness', 'evil', 'evilness'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "synonyms=[]\n",
+    "antonyms=[]\n",
+    "\n",
+    "for syn in wordnet.synsets(\"good\"):\n",
+    "    for l in syn.lemmas():\n",
+    "        synonyms.append(l.name())\n",
+    "        if l.antonyms():\n",
+    "            antonyms.append(l.antonyms()[0].name())\n",
+    "            \n",
+    "print(set(synonyms))\n",
+    "print(set(antonyms))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the semantic similarity between 2 words:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9090909090909091\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1=wordnet.synset(\"ship.n.01\")\n",
+    "w2=wordnet.synset(\"boat.n.01\")\n",
+    "print(w1.wup_similarity(w2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ [sentdex-corpora](https://youtu.be/TKAXDqoG2dc)\n",
+    "+ [sentdex-Wordnet](https://youtu.be/T68P5-8tM-Y)\n",
+    "+ [Princeton.edu](https://wordnet.princeton.edu/)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
